Agregue bootstraps en el header y en el main de las 5 paginas

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -1,38 +1,80 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KRG Controls</title>
+    <!--bts-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
+
 <body>
     <header class="header">
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img src="../assets/img/Logo.png" alt="Logo" width="150px" </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active text-black" aria-current="page"
+                                        href="../index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="nosotros.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="galeria.html">Galeria</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contacto.html">Contacto</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Eventos</a>
+                                </li>
+                            </ul>
+                        </div>
+                </div>
+            </nav>
+        </div>
+        <!-- 
         <div class="contenedorLogo"">
-             <a href="#"><img class="logo" src="../assets/img/Logo.png" alt="Logo" width="200px>"</a> 
+             <a href=" #"><img class="logo" src="../assets/img/Logo.png" alt="Logo" width="200px>" </a>
         </div>
         <nav class="navegacion">
-          <ul>
-              <li class="listaItem"><a class="linkNav" href="../index.html">Inicio</a></li>
-              <li class="listaItem"><a class="linkNav" href="nosotros.html">Nosotros</a></li>
-              <li class="listaItem"><a class="linkNav" href="galeria.html">Galeria</a></li>
-              <li class="listaItem"><a class="linkNav" href="contacto.html">Contacto</a></li>
-              <li class="listaItem"><a class="linkNav" href="#">Eventos</a></li>
-          </ul>
+            <ul>
+                <li class="listaItem"><a class="linkNav" href="../index.html">Inicio</a></li>
+                <li class="listaItem"><a class="linkNav" href="nosotros.html">Nosotros</a></li>
+                <li class="listaItem"><a class="linkNav" href="galeria.html">Galeria</a></li>
+                <li class="listaItem"><a class="linkNav" href="contacto.html">Contacto</a></li>
+                <li class="listaItem"><a class="linkNav" href="#">Eventos</a></li>
+            </ul>
         </nav>
+        -->
         <section>
-          <div class="contenedorTituloheader">
-              <h1>Aqui encontraras los proximos eventos donde nos podras encontrar!</h1>
-          <p>Ofrecemos galletas y mucho aire acondicionado</p>
-          </div>
-  
+            <div class="contenedorTituloheader">
+                <h1>Nuestro objetivo consiste en proveer el mejor servicio para nuestros clientes, brindando una
+                    solución optima, económica y técnica de cada uno de los proyectos desarrollados, siempre con la
+                    mejor y mas alta calidad, aportando la experticia de nuestro personal
+                </h1>
+                <p>Aqui encontraras los proximos eventos donde nos podras encontrar</p>
+            </div>
+
         </section>
-      </header>
+    </header>
     <main>
-         <hr>
-         
-         <hr> 
+        <hr>
+
+        <hr>
     </main>
     <footer class="footer">
         <p>Todos los derechos reservados© - Alejandro Ramirez</p>
@@ -45,6 +87,9 @@
                 class="fa-brands fa-facebook"></i></a>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
