--- a/index.html
+++ b/index.html
@@ -6,13 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KRG Controls</title>
+    <!--bts-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilos.css">
     <script src="https://kit.fontawesome.com/3faed25249.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-    <header class="header">
+    <header class="header container-fluid">
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img src="./assets/img/Logo.png" alt="Logo" width="150px" </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active text-black" aria-current="page" href="#">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./pages/galeria.html">Galeria</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./pages/eventos.html">Eventos</a>
+                                </li>
+                            </ul>
+                        </div>
+                </div>
+            </nav>
+        </div>
+        <!-- codigo sin bootstrap
         <div class="contenedorLogo"">
            <a href=" #"><img class="logo" src="./assets/img/Logo.png" alt="Logo" width="200px>" </a>
         </div>
@@ -25,19 +60,55 @@
                 <li class="listaItem"><a class="linkNav" href="./pages/eventos.html">Eventos</a></li>
             </ul>
         </nav>
+        -->
         <section>
             <div class="contenedorTituloheader">
-                <h1>KRG Controls SAS: Calidad e innovacion a un margen inigualable</h1>
-                <p>Años de experiencia siempre a tu servicio</p>
+                <h1>Desarrollamos Soluciones en el ámbito de la Ingeniería mecánica y electrónica con los más altos
+                    estándares de calidad y responsabilidad con nuestros clientes, teniendo como guía nuestros valores
+                    corporativos</h1>
+                <p>KRG CONTROLS SAS</p>
             </div>
 
         </section>
     </header>
     <main class="main">
         <hr class="marginHr">
-        <section class="sectionCards">
+        <section class="container">
             <h2>Nuestro Servicio</h2>
             <p>Puedes encontrar todo lo que ofrecemos a un solo click</p>
+            <div class="card-group">
+                <div class="card">
+                    <a href="./pages/galeria.html"><img src="./assets/img/aire.png" alt="Galeria"
+                            class="card-img-top"></a>
+                    <div class="card-body">
+                        <h5 class="card-title">Galeria</h5>
+                        <p class="card-text">Te invitamos a conocer nuestros servicios a lo largo de nuestra carrera.
+                        </p>
+
+                    </div>
+                </div>
+                <div class="card">
+                    <a href="./pages/galeria.html"><img src="./assets/img/Logo2.jpg" alt="eventos"
+                            class="card-img-top"></a>
+                    <div class="card-body">
+                        <h5 class="card-title">Eventos</h5>
+                        <p class="card-text">Te mostramos todos nuestros eventos en nuestras principales ciudades del
+                            pais.</p>
+
+                    </div>
+                </div>
+                <div class="card">
+                    <a href="./pages/galeria.html"><img src="./assets/img/empresa.jpg" alt="nosotros"
+                            class="card-img-top"></a>
+                    <div class="card-body">
+                        <h5 class="card-title">Nosotros</h5>
+                        <p class="card-text">Aquí conoceras quienes somos y el por qué de nuestra exelencia en el
+                            mercado.</p>
+
+                    </div>
+                </div>
+            </div>
+            <!-- 
             <div class="card">
                 <a href="./pages/galeria.html"><img src="./assets/img/aire.png" alt="productos"></a>
                 <h3>Galeria</h3>
@@ -47,9 +118,10 @@
                 <h3>Eventos</h3>
             </div>
             <div class="card">
-                <a href="./pages/nosotros.html"><img src="./assets/img/azul.png" alt="nosotros"></a>
+                <a href="./pages/nosotros.html"><img src="./assets/img/empresa.jpg" alt="nosotros"></a>
                 <h3>Nosotros</h3>
             </div>
+            -->
         </section>
         <hr class="marginHr">
     </main>
@@ -71,7 +143,9 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
