--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,37 +1,78 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KRG Controls</title>
+    <!--bts-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
+
 <body>
     <header class="header">
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img src="../assets/img/Logo.png" alt="Logo" width="150px" </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active text-black" aria-current="page"
+                                        href="../index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="nosotros.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="galeria.html">Galeria</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Contacto</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="eventos.html">Eventos</a>
+                                </li>
+                            </ul>
+                        </div>
+                </div>
+            </nav>
+        </div>
+        <!-- 
         <div class="contenedorLogo"">
-             <a href="#"><img class="logo" src="../assets/img/Logo.png" alt="Logo" width="200px>"</a> 
+             <a href=" #"><img class="logo" src="../assets/img/Logo.png" alt="Logo" width="200px>" </a>
         </div>
         <nav class="navegacion">
-          <ul>
-              <li class="listaItem"><a class="linkNav" href="../index.html">Inicio</a></li>
-              <li class="listaItem"><a class="linkNav" href="nosotros.html">Nosotros</a></li>
-              <li class="listaItem"><a class="linkNav" href="galeria.html">Galeria</a></li>
-              <li class="listaItem"><a class="linkNav" href="#">Contacto</a></li>
-              <li class="listaItem"><a class="linkNav" href="eventos.html">Eventos</a></li>
-          </ul>
+            <ul>
+                <li class="listaItem"><a class="linkNav" href="../index.html">Inicio</a></li>
+                <li class="listaItem"><a class="linkNav" href="nosotros.html">Nosotros</a></li>
+                <li class="listaItem"><a class="linkNav" href="galeria.html">Galeria</a></li>
+                <li class="listaItem"><a class="linkNav" href="#">Contacto</a></li>
+                <li class="listaItem"><a class="linkNav" href="eventos.html">Eventos</a></li>
+            </ul>
         </nav>
+        -->
         <section>
-          <div class="contenedorTituloheader">
-              <h1>¡Es facil y gratis contactarte con nostros!</h1>
-          <p>Ven y descrubre por que nuestro servicio es uno de los mejores</p>
-          </div>
-  
+            <div class="contenedorTituloheader">
+                <h1>En el año 2025, continuar con un equipo humano altamente comprometido y calificado logrando ser
+                    reconocidos como la mejor opción para las soluciones de automatización en el mercado, entregando
+                    productos y servicios con responsabilidad social y ambiental de alta calidad.</h1>
+                <p>KRG CONTROLS SAS</p>
+            </div>
+
         </section>
-      </header>
+    </header>
     <main>
-         <!--formulario de contacto-->
-         <form action="">
+        <!--formulario de contacto-->
+        <form action="">
             <label for="nombre">Nombre</label>
             <input type="text" name="nombre" id="nombre">
             <label for="email">Email</label>
@@ -40,8 +81,8 @@
             <input type="mensaje" name="mensaje" id="mensaje">
             <textarea name="mensaje" id="mensaje" cols="30" rows="1"></textarea>
             <input type="submit" value="enviar">
-         </form>
-         
+        </form>
+
     </main>
     <footer class="footer">
         <p>Todos los derechos reservados© - Alejandro Ramirez</p>
@@ -54,6 +95,9 @@
                 class="fa-brands fa-facebook"></i></a>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
