--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -1,38 +1,112 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KRG Controls</title>
+    <!--bts-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
+
 <body>
     <header class="header">
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img src="../assets/img/Logo.png" alt="Logo" width="150px" </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active text-black" aria-current="page"
+                                        href="../index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="nosotros.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Galeria</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contacto.html">Contacto</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="eventos.html">Eventos</a>
+                                </li>
+                            </ul>
+                        </div>
+                </div>
+            </nav>
+        </div>
+        <!-- 
         <div class="contenedorLogo"">
-             <a href="#"><img class="logo" src="../assets/img/Logo.png" alt="Logo" width="200px>"</a> 
+             <a href=" #"><img class="logo" src="../assets/img/Logo.png" alt="Logo" width="200px>" </a>
         </div>
         <nav class="navegacion">
-          <ul>
-              <li class="listaItem"><a class="linkNav" href="../index.html">Inicio</a></li>
-              <li class="listaItem"><a class="linkNav" href="nosotros.html">Nosotros</a></li>
-              <li class="listaItem"><a class="linkNav" href="#">Galeria</a></li>
-              <li class="listaItem"><a class="linkNav" href="contacto.html">Contacto</a></li>
-              <li class="listaItem"><a class="linkNav" href="eventos.html">Eventos</a></li>
-          </ul>
+            <ul>
+                <li class="listaItem"><a class="linkNav" href="../index.html">Inicio</a></li>
+                <li class="listaItem"><a class="linkNav" href="nosotros.html">Nosotros</a></li>
+                <li class="listaItem"><a class="linkNav" href="#">Galeria</a></li>
+                <li class="listaItem"><a class="linkNav" href="contacto.html">Contacto</a></li>
+                <li class="listaItem"><a class="linkNav" href="eventos.html">Eventos</a></li>
+            </ul>
         </nav>
+        -->
         <section>
-          <div class="contenedorTituloheader">
-              <h1>Si no confias en el bla bla bla, mejor te presentamos nuestra galeria</h1>
-          <p>...</p>
-          </div>
-  
+            <div class="contenedorTituloheader">
+                <h1>Galeria</h1>
+                <h2>Ingeniería, arranque, instalación y programación de sistemas de control para sistemas de aire
+                    acondicionado contemplados en los siguientes proyectos:</h1>
+                    <p>KRG CONTROLS SAS</p>
+            </div>
+
         </section>
-      </header>
-    <main>
-         <hr>
-        
-         <hr> 
+    </header>
+    <main class="main">
+        <hr class="marginHr">
+        <section class="container">
+            <h2>Nuestro Servicio</h2>
+            <p>Puedes encontrar todo lo que ofrecemos a un solo click</p>
+            <div class="card-group">
+                <div class="card">
+                    <img src="../assets/img/Screen.jpg" alt="productos" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Termostato</h5>
+                        <p class="card-text">Contamos con implementación de termostatos para un control de la temperatura mas eficiente.
+                        </p>
+
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../assets/img/sistema.jpg" alt="eventos" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Automatización de edificios</h5>
+                        <p class="card-text">Contamos con automatización de edificios con el sistema control HVAC
+                            (heating, ventilation and air conditioning) es un sistema de climatización y ventilación.
+                        </p>
+
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../assets/img/sistema2.jpg" alt="nosotros" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Control de plantas de agua fría</h5>
+                        <p class="card-text">Implementamos los mejore sistemas para el control de plantas de agua fría.</p>
+
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <hr class="marginHr">
     </main>
     <footer class="footer">
         <p>Todos los derechos reservados© - Alejandro Ramirez</p>
@@ -45,6 +119,9 @@
                 class="fa-brands fa-facebook"></i></a>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
