agrego correciones, scss

--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
         -->
         <section>
             <div class="contenedorTituloheader">
-                <h1>Desarrollamos Soluciones en el ámbito de la Ingeniería mecánica y electrónica con los más altos
-                    estándares de calidad y responsabilidad con nuestros clientes, teniendo como guía nuestros valores
-                    corporativos</h1>
+                <h1>Desarrollamos Soluciones en el ámbito de la Ingeniería mecánica</h1>
                 <p>KRG CONTROLS SAS</p>
             </div>
 
@@ -74,17 +72,17 @@
     <main class="main">
         <hr class="marginHr">
         <section class="container">
-            <h2>Nuestro Servicio</h2>
+            <h1>Nuestro Servicio</h1>
             <p>Puedes encontrar todo lo que ofrecemos a un solo click</p>
             <div class="card-group">
                 <div class="card">
                     <a href="./pages/galeria.html"><img src="./assets/img/aire.png" alt="Galeria"
                             class="card-img-top"></a>
                     <div class="card-body">
-                        <h5 class="card-title">Galeria</h5>
+                        <h2 class="card-title">Galeria</h2>
                         <p class="card-text">Te invitamos a conocer nuestros servicios a lo largo de nuestra carrera.
                         </p>
-
+                       
                     </div>
                 </div>
                 <div class="card">
