--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -63,9 +63,7 @@
         <section>
             <div class="contenedorTituloheader">
                 <h1>Galeria</h1>
-                <h2>Ingeniería, arranque, instalación y programación de sistemas de control para sistemas de aire
-                    acondicionado contemplados en los siguientes proyectos:</h1>
-                    <p>KRG CONTROLS SAS</p>
+                <p>Algunas Imagenes</p>
             </div>
 
         </section>
@@ -73,14 +71,13 @@
     <main class="main">
         <hr class="marginHr">
         <section class="container">
-            <h2>Nuestro Servicio</h2>
-            <p>Puedes encontrar todo lo que ofrecemos a un solo click</p>
             <div class="card-group">
                 <div class="card">
                     <img src="../assets/img/Screen.jpg" alt="productos" class="card-img-top">
                     <div class="card-body">
-                        <h5 class="card-title">Termostato</h5>
-                        <p class="card-text">Contamos con implementación de termostatos para un control de la temperatura mas eficiente.
+                        <h2 class="card-title">Termostato</h2>
+                        <p class="card-text">Contamos con implementación de termostatos para un control de la
+                            temperatura mas eficiente.
                         </p>
 
                     </div>
@@ -88,7 +85,7 @@
                 <div class="card">
                     <img src="../assets/img/sistema.jpg" alt="eventos" class="card-img-top">
                     <div class="card-body">
-                        <h5 class="card-title">Automatización de edificios</h5>
+                        <h1 class="card-title">Automatización de edificios</h1>
                         <p class="card-text">Contamos con automatización de edificios con el sistema control HVAC
                             (heating, ventilation and air conditioning) es un sistema de climatización y ventilación.
                         </p>
@@ -98,8 +95,9 @@
                 <div class="card">
                     <img src="../assets/img/sistema2.jpg" alt="nosotros" class="card-img-top">
                     <div class="card-body">
-                        <h5 class="card-title">Control de plantas de agua fría</h5>
-                        <p class="card-text">Implementamos los mejore sistemas para el control de plantas de agua fría.</p>
+                        <h1 class="card-title">Control de plantas de agua fría</h1>
+                        <p class="card-text">Implementamos los mejore sistemas para el control de plantas de agua fría.
+                        </p>
 
                     </div>
                 </div>
