--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -58,7 +58,7 @@
     </header>
     <main class="main">
         <hr class="marginHr">
-        <section class="container">
+        <section class="contenedorTituloheader p">
             <h1>Nuestro Staff</h1>
             <p>Aqui encontraras nuestro quienes somos</p>
             <div class="card-group">
